--- a/style.css
+++ b/style.css
@@ -9,4 +9,24 @@ body{
     margin: 120px auto;
     padding: 50px;
     box-shadow: 10px 10px 5px rgb(82,11,77);
+    border-radius: 6px;
+
+}
+
+#btn{
+    color: white;
+    background-color: rgb(105, 15, 190);
+    padding: 10%;
+    font-size: large;
+    border-radius: 10px;
+
+}
+
+@media screen and (max-width:700px)
+{
+    #form{
+        width: 65px;
+        padding: 40px;
+
+    }
 }
